# cli

./: .dockerignore  .env.dev.sample  .gitignore  .woodpecker.yml  Cargo.toml  Dockerfile  Makefile  README.md  crates.js  help.html  pack.sh  search-index.js  settings.html  source-files.js  src-files.js  upload.sh
.github/workflows/: linux.yml
.reuse/: dep5
benches/: 2021-08-31
implementors/clap_builder/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js  trait.Subcommand.js
implementors/core/clone/: trait.Clone.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
mcaptcha_cli/: all.html  enum.Args.html  fn.main.html  fn.prove_work.html  index.html  sidebar-items.js  struct.Args.html  struct.Offline.html  struct.Online.html
scripts/: bench.sh
src/: main.rs
src/mcaptcha_cli/: main.rs.html
