[package]
name = "mcaptcha-cli"
description = "CLI tool to solve mCaptcha" 
version = "0.2.0"
repository = "https://github.com/mCaptcha/cli"
documentation = "https://mcaptcha.org/docs/"
authors = ["realaravinth <realaravinth@batsense.net>"]
license = "AGPL-3.0"
edition = "2021"


[dependencies]
pow_sha256 = { version = "0.3.1", git = "https://github.com/mCaptcha/pow_sha256" }
clap = {version = "4.3", features = ["derive"]}
