[package]
name = "mcaptcha-cli"
description = "CLI tool to solve mCaptcha" 
version = "0.2.0"
repository = "https://github.com/mCaptcha/cli"
documentation = "https://mcaptcha.org/docs/"
authors = ["realaravinth <realaravinth@batsense.net>"]
license = "AGPL-3.0"
edition = "2021"


[dependencies]
pow_sha256 = { version = "0.3.1", git = "https://github.com/mCaptcha/pow_sha256" }
clap = { version = "4.3", features = ["derive"] }
tokio = { version = "1.31.0", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.11.18", features = ["json", "gzip"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
url = { version = "2.4.0", features = ["serde"] }
