[package]
name = "mcaptcha-cli"
description = "CLI tool to solve mCaptcha" 
version = "0.2.0"
repository = "https://github.com/mCaptcha/cli"
documentation = "https://mcaptcha.org/docs/"
authors = ["realaravinth <realaravinth@batsense.net>"]
license = "AGPL-3.0"
edition = "2021"


[dependencies]
mcaptcha_pow_sha256 = "0.4.0"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.33", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.11.18", features = ["json", "gzip", "native-tls-vendored"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
url = { version = "2.4.1", features = ["serde"] }
